<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="protect.budgetwatch.AccountsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="horizontal"
                      android:padding="10.0dip"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp"
                      android:textStyle="bold"
                      android:layout_gravity="center_vertical"
                      android:paddingStart="20.0dip"
                      android:paddingEnd="20.0dip"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@+id/storeName"
                      android:text="@string/storeName" />
            <LinearLayout android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">
                <EditText android:id="@+id/storeName"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:inputType="text"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:padding="10.0dip"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp"
                      android:textStyle="bold"
                      android:layout_gravity="center_vertical"
                      android:paddingStart="20.0dip"
                      android:paddingEnd="20.0dip"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@+id/cardId"
                      android:text="@string/cardId" />
            <EditText android:id="@+id/cardId"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:padding="10.0dip"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp"
                      android:textStyle="bold"
                      android:layout_gravity="center_vertical"
                      android:paddingStart="20.0dip"
                      android:paddingEnd="20.0dip"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@+id/value"
                      android:text="@string/value" />
            <EditText android:id="@+id/value"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:padding="10.0dip"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp"
                      android:textStyle="bold"
                      android:layout_gravity="center_vertical"
                      android:paddingStart="20.0dip"
                      android:paddingEnd="20.0dip"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/receipt" />
            <TextView android:id="@+id/receiptLocation"
                      android:layout_height="0dp"
                      android:layout_width="0dp"
                      android:visibility="gone" />
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:baselineAligned="true"
                          android:visibility="gone"
                          android:id="@+id/noReceiptButtonLayout">
                <Button android:id="@+id/captureButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/capture"
                        android:layout_weight="1.0"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:baselineAligned="true"
                          android:visibility="gone"
                          android:id="@+id/hasReceiptButtonLayout">
                <Button android:id="@+id/viewButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/view"
                        android:layout_weight="1.0"/>
                <Button android:id="@+id/updateButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:layout_weight="1.0"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:padding="10.0dip"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:baselineAligned="true">
            <Button android:id="@+id/cancelButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_weight="1.0" />
            <Button android:id="@+id/saveButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
